--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,17 +1,9 @@
-/* Import Courier Prime by Google Fonts*/
 @import url('https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap');
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: 'Courier Prime',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: #282A36;
-}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  background-color: #282A36;
 }
