--- a/web/src/App.css
+++ b/web/src/App.css
@@ -1,4 +1,19 @@
-/* Import Courier Prime by Google Fonts*/
-@import url('https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap');
+.App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
+.App-header {
+  background-color: #282c34;
 
+  min-height: 100vh;
+  
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.clear {
+  clear: both;
+}
