--- a/adm/src/App.module.css
+++ b/adm/src/App.module.css
@@ -19,6 +19,11 @@
   font-size: 5rem;
 }
 
+form {
+  width: 100%;
+  max-width: 450px;
+}
+
 .loginCard {
   display: flex;
   justify-content: center;
@@ -28,6 +33,7 @@
   background-color: var(--purple-gray);
   padding: 1rem;
   border-radius: 20px;
+  margin: 0 1rem;
 }
 
 .loginCard p {
@@ -41,10 +47,10 @@
   flex-direction: column;
   gap: 1rem;
   margin-top: 1rem;
+  width: 100%;
 }
 
 .loginCard div input {
-  max-width: 340px;
   padding: 1rem 5rem 1rem 1rem;
   border-radius: 50px;
   border: 0;
