--- a/web/src/index.scss
+++ b/web/src/index.scss
@@ -16,4 +16,10 @@ body {
   audio {
     max-width: 100%;
   }
+
+  h1, h2, h3, h4, h5, h6, p, span, b, i, strong, em, input, 
+  input::placeholder, select, option, textarea, button {
+    font-family: 'Courier Prime';
+    font-weight: 400;
+  }
 }
